--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<script src="https://lin0de.github.io/ruffle/ruffle.js"></script>
+<script src="/ruffle/ruffle.js"></script>
 <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
-        <center><embed height="500" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://lin0de.github.io/swf-games/Breaking%20the%20Bank.swf" type="application/x-shockwave-flash" width="687"></embed>
+        <center><embed height="500" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="/swf-games/Breaking%20the%20Bank.swf" type="application/x-shockwave-flash" width="687"></embed>
 </div>
