--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<title>Henry Stickmin: Breaking the Bank (2008)</title>
+<link rel="icon" href="icon.jpg" type="image/x-icon">
 <script src="/ruffle/ruffle.js"></script>
 <div class="swf"dir="ltr" style="text-align: left;" trbidi="on">
         <center><embed height="500" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="/swf-games/Breaking%20the%20Bank.swf" type="application/x-shockwave-flash" width="687"></embed>
